kustomize/base/agent_morpheus-RH.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent-morpheus-rh
  labels:
    app: agent-morpheus
    component: agent-morpheus-rh
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: agent-morpheus
      component: agent-morpheus-rh
  template:
    metadata:
      labels:
        app: agent-morpheus
        component: agent-morpheus-rh
    spec:
      nodeSelector:
        nvidia.com/gpu.deploy.driver: "true"
      imagePullSecrets: []
      tolerations:
        - key: p4-gpu
          operator: Exists
          effect: NoSchedule
      serviceAccountName: morpheus-sa
      containers:
        - name: agent-morpheus
          image: quay.io/ecosystem-appeng/agent-morpheus-rh:latest
          imagePullPolicy: Always
          workingDir: /workspace/
          args:
            - "python"
            - "/workspace/src/main.py"
            - "--log_level"
            - "DEBUG"
            - "cve"
            - "pipeline"
            - "--config_file"
            - "/configs/agent-morpheus-config.json"
          securityContext:
            runAsUser: 0
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
          resources:
            limits:
              memory: "8Gi"
              cpu: "500m"
              nvidia.com/gpu: "1"
            requests:
              memory: "1Gi"
              cpu: "100m"
              nvidia.com/gpu: "1"
          volumeMounts:
            - name: config
              mountPath: /configs
            - name: cache
              mountPath: /morpheus-data
            - name: ca-bundle
              mountPath: /app/certs
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: agent-morpheus-config
        - name: cache
          persistentVolumeClaim:
            claimName: agent-morpheus-rh-data
        - name: ca-bundle
          configMap:
            name: openshift-service-ca.crt
---
apiVersion: v1
kind: Service
metadata:
  name: agent-morpheus-rh
  labels:
    app: agent-morpheus
    component: agent-morpheus-rh
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: agent-morpheus
    component: agent-morpheus-rh
