kustomize/base/agent_morpheus_jaeger.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: agent-morpheus-jaeger
  labels:
    app: agent-morpheus-jaeger
    component: agent-morpheus-jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agent-morpheus-jaeger
      component: agent-morpheus-jaeger
  template:
    metadata:
      labels:
        app: agent-morpheus-jaeger
        component: agent-morpheus-jaeger
    spec:
      containers:
        - name: agent-morpheus-jaeger
          image: 'docker.io/jaegertracing/jaeger:2.5.0'
          ports:
            - containerPort: 4317
            - containerPort: 16686
          args:
            - "--config=/etc/jaeger/jaeger-config.yaml"
          volumeMounts:
            - name: storage
              mountPath: /data
            - name: config
              mountPath: /etc/jaeger
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: agent-morpheus-jaeger-storage-pvc
        - name: config
          configMap:
            name: agent-morpheus-jaeger-config

---
apiVersion: v1
kind: Service
metadata:
  name: agent-morpheus-jaeger-service
spec:
  selector:
    app: agent-morpheus-jaeger
  ports:
    - name: otlp-grpc
      port: 4317
    - name: ui
      port: 16686
