kustomize/base/agent_morpheus_jeager.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: agent-morpheus-jaeger
  labels:
    app: agent-morpheus-jaeger
    component: agent-morpheus-jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agent-morpheus-jaeger
      component: agent-morpheus-jaeger
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: agent-morpheus-jaeger
        component: agent-morpheus-jaeger
    spec:
      containers:
        - name: agent-morpheus-jaeger
          image: 'docker.io/jaegertracing/jaeger:2.5.0'
          ports:
            - containerPort: 4317
            - containerPort: 4318
            - containerPort: 5778
            - containerPort: 9411
            - containerPort: 16686
          volumeMounts:
            - name: storage
              mountPath: /data
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: agent-morpheus-jaeger-storage-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: agent-morpheus-jaeger-service
spec:
  selector:
    app: agent-morpheus-jaeger
  ports:
    - name: otlp-grpc
      port: 4317
    - name: otlp-http
      port: 4318
    - name: ui
      port: 16686
