kustomize/base/exploit_iq_client_db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exploit-iq-client-db
  labels:
    app: exploit-iq
    component: exploit-iq-client-db
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: exploit-iq
      component: exploit-iq-client-db
  template:
    metadata:
      labels:
        app: exploit-iq
        component: exploit-iq-client-db
    spec:
      containers:
        - name: mongodb
          image: mongodb/mongodb-community-server:8.0.3-ubi8
          imagePullPolicy: IfNotPresent
          ports:
            - name: db
              protocol: TCP
              containerPort: 27017
          volumeMounts:
            - name: data
              mountPath: /data/db
            - name: init-scripts
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: exploit-iq-client-data
        - name: init-scripts
          configMap:
            name: mongodb-init
---
apiVersion: v1
kind: Service
metadata:
  name: exploit-iq-client-db
  labels:
    app: exploit-iq
    component: exploit-iq-client-db
spec:
  ports:
  - name: db
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: exploit-iq
    component: exploit-iq-client-db
