kustomize/base/exploit_iq_client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exploit-iq-client
  labels:
    app: exploit-iq
    component: exploit-iq-client
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: exploit-iq
      component: exploit-iq-client
  template:
    metadata:
      labels:
        app: exploit-iq
        component: exploit-iq-client
    spec:
      imagePullSecrets: []
      serviceAccountName: exploit-iq-client-sa
      containers:
        - name: exploit-iq-client
          args:
            - ./application
            - -Dquarkus.http.host=0.0.0.0
            - -Dquarkus.log.category."com.redhat.ecosystemappeng.morpheus".level=DEBUG
          image: quay.io/ecosystem-appeng/agent-morpheus-client:latest
          imagePullPolicy: Always
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
          volumeMounts:
            - name: tls-certs
              mountPath: /etc/tls
              readOnly: true

            - name: includes-excludes
              mountPath: /config
              readOnly: true

      volumes:
        - name: tls-certs
          secret:
            secretName: exploit-iq-client-tls
        - name: includes-excludes
          configMap:
            name: includes-excludes-json
---
apiVersion: v1
kind: Service
metadata:
  name: exploit-iq-client
  labels:
    app: exploit-iq
    component: exploit-iq-client
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: exploit-iq-client-tls
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: metrics
    protocol: TCP
    port: 9000
    targetPort: 9000
  selector:
    app: exploit-iq
    component: exploit-iq-client
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: exploit-iq-client
  annotations:
    haproxy.router.openshift.io/timeout: 5m
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  port:
    targetPort: https
  to:
    kind: Service
    name: exploit-iq-client
