kustomize/base/exploit_iq_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exploit-iq
  labels:
    app: exploit-iq
    component: exploit-iq
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: exploit-iq
      component: exploit-iq
  template:
    metadata:
      labels:
        app: exploit-iq
        component: exploit-iq
    spec:
      imagePullSecrets: []
      serviceAccountName: exploit-iq-sa
      containers:
        - name: exploit-iq-phoenix-tracing
          image: quay.io/ecosystem-appeng/agent-morpheus-rh:nat
          imagePullPolicy: Always
          workingDir: /workspace/
          args:
            - "phoenix"
            - "serve"
          securityContext:
            runAsUser: 0
          ports:
            - name: tracing
              protocol: TCP
              containerPort: 6006
          resources:
            limits:
              memory: "2Gi"
              cpu: "500m"
            requests:
              memory: "1Gi"
              cpu: "100m"
        - name: exploit-iq
          image: quay.io/ecosystem-appeng/agent-morpheus-rh:nat
          imagePullPolicy: Always
          workingDir: /workspace/
          args:
            - "nat"
            - "--log-level"
            - "debug"
            - "serve"
            - "--config_file=/configs/exploit-iq-config.yml"
            - "--host"
            - "0.0.0.0"
            - "--port"
            - "8080"

          securityContext:
            runAsUser: 0
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
          resources:
            limits:
              memory: "8Gi"
              cpu: "1000m"
            requests:
              memory: "1Gi"
              cpu: "1000m"
          volumeMounts:
            - name: config
              mountPath: /configs
            - name: cache
              mountPath: /exploit-iq-data
            - name: ca-bundle
              mountPath: /app/certs
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: exploit-iq-config
        - name: cache
          persistentVolumeClaim:
            claimName: exploit-iq-data
        - name: ca-bundle
          configMap:
            name: openshift-service-ca.crt
---
apiVersion: v1
kind: Service
metadata:
  name: exploit-iq
  labels:
    app: exploit-iq
    component: exploit-iq
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: exploit-iq
    component: exploit-iq
---
apiVersion: v1
kind: Service
metadata:
  name: exploit-iq-phoenix-tracing
  labels:
    app: exploit-iq
    component: exploit-iq-tracing
spec:
  ports:
  - name: tracing
    port: 6006
    protocol: TCP
    targetPort: 6006
  selector:
    app: exploit-iq
    component: exploit-iq
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: exploit-iq
    component: exploit-iq-tracing
  name: exploit-iq-phoenix-tracing
spec:
  port:
    targetPort: tracing
  to:
    kind: Service
    name: exploit-iq-phoenix-tracing
    weight: 100
