kustomize/base/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-cache
  labels:
    app: exploit-iq
    component: nginx-cache
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: exploit-iq
      component: nginx-cache
  template:
    metadata:
      labels:
        app: exploit-iq
        component: nginx-cache
    spec:
      imagePullSecrets: []
      containers:
        - name: nginx
          image: docker.io/nginxinc/nginx-unprivileged:1.27
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
          resources:
            limits:
              memory: "256Mi"
              cpu: "250m"
            requests:
              memory: "100Mi"
              cpu: "100m"
          volumeMounts:
            - name: routes
              mountPath: /etc/nginx/templates/routes
            - name: variables
              mountPath: /etc/nginx/templates/variables
            - name: config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: extra-config
              mountPath: /etc/nginx/conf.d
            - name: cache
              mountPath: /server_cache
      volumes:
        - name: config
          configMap:
            name: nginx-cache-config
        - name: extra-config
          emptyDir: {}
        - name: routes
          configMap:
            name: nginx-cache-routes
        - name: variables
          configMap:
            name: nginx-cache-variables
        - name: cache
          persistentVolumeClaim:
            claimName: nginx-cache-server
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-cache
  labels:
    app: exploit-iq
    component: nginx-cache
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: exploit-iq
    component: nginx-cache
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: exploit-iq
  annotations:
    haproxy.router.openshift.io/timeout: 5m
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  port:
    targetPort: 8080
  to:
    kind: Service
    name: nginx-cache
