kustomize/base/mongodb_network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongodb-network-policy
  labels:
    app: exploit-iq
    component: exploit-iq-client-db
spec:
  podSelector:
    matchLabels:
      app: exploit-iq
      component: exploit-iq-client-db
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: exploit-iq
          component: exploit-iq-client
    ports:
    - protocol: TCP
      port: 27017
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-dns
    ports:
    - protocol: UDP
      port: 5353
